[gd_scene load_steps=11 format=3 uid="uid://4wb77emq8t5p"]

[ext_resource type="Script" path="res://menu/main/menu.gd" id="1_6hvox"]
[ext_resource type="Texture2D" uid="uid://drssc5o2ehjq" path="res://main/logo.png" id="1_m6h1l"]
[ext_resource type="Texture2D" uid="uid://brcdsp82d82se" path="res://menu/main/background.png" id="2_f1en6"]
[ext_resource type="Texture2D" uid="uid://dnho657mg7o1w" path="res://menu/main/icons/solo_game.png" id="2_tkm62"]
[ext_resource type="Texture2D" uid="uid://bxs6sdufwbl8p" path="res://menu/main/icons/together_game.png" id="3_fpx5a"]
[ext_resource type="Texture2D" uid="uid://djuddec1qr5ot" path="res://menu/main/icons/shop.png" id="4_jpuob"]
[ext_resource type="Texture2D" uid="uid://d2rpk8yt0h06x" path="res://menu/main/icons/achievements.png" id="5_noej1"]
[ext_resource type="Texture2D" uid="uid://c3sk875fn0rx" path="res://menu/main/icons/settings.png" id="6_0pcoh"]
[ext_resource type="Texture2D" uid="uid://b0j3g7rkerkdm" path="res://menu/theme/icons/help.png" id="7_aw44p"]
[ext_resource type="PackedScene" uid="uid://cuewsvjjnyl40" path="res://menu/name_dialog/name_dialog.tscn" id="10_yw6bl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hvox")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.768627, 0.768627, 0.768627, 1)

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -360.0
offset_right = 800.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f1en6")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 16.0
offset_right = 400.0
offset_bottom = 176.0
grow_horizontal = 2
texture = ExtResource("1_m6h1l")

[node name="ButtonsContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -124.0
offset_right = 194.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="PlaySolo" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 0
disabled = true
text = "Играть одному"
icon = ExtResource("2_tkm62")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="PlayNetwork" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
theme_override_constants/icon_max_width = 0
text = "Играть по сети"
icon = ExtResource("3_fpx5a")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Shop" type="Button" parent="ButtonsContainer"]
layout_mode = 2
disabled = true
text = "Магазин"
icon = ExtResource("4_jpuob")

[node name="Achievements" type="Button" parent="ButtonsContainer"]
layout_mode = 2
disabled = true
text = "Достижения"
icon = ExtResource("5_noej1")

[node name="Settings" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Настройки"
icon = ExtResource("6_0pcoh")

[node name="About" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Об игре"
icon = ExtResource("7_aw44p")

[node name="NameDialog" parent="." instance=ExtResource("10_yw6bl")]

[node name="About" type="Window" parent="."]
title = "Об игре"
position = Vector2i(280, 28)
size = Vector2i(720, 440)
visible = false
transient = true
exclusive = true
unresizable = true

[node name="Background" type="ColorRect" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="About/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="About/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="About/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AuthorsTitle" type="Label" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Авторы"
horizontal_alignment = 1

[node name="Authors" type="Label" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Summersay415 - идея, программирование, оружия и скины
wiziritka - скины и карты
DanKras - скины и оружие
BaCat8, Kaurt - скины

Тестировщики (и благодарность):
ZeroHero135, LohDebil228, Блоха в Сарафане"
autowrap_mode = 2

[node name="EngineTitle" type="Label" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Движок
"
horizontal_alignment = 1

[node name="Engine" type="Label" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Игра сделана на движке Godot Engine, имеющий лицензию MIT. С текстом лицензии можно ознакомиться по ссылке ниже:"
autowrap_mode = 2

[node name="LinkButton" type="LinkButton" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Лицензия Godot Engine"
uri = "https://godotengine.org/license"

[node name="OtherTitle" type="Label" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Другое
"
horizontal_alignment = 1

[node name="Other" type="Label" parent="About/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Макс, я не знаю, где ты живёшь. Надо исправлять."
autowrap_mode = 2

[node name="Close" type="Button" parent="About/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ОК"

[connection signal="pressed" from="ButtonsContainer/PlayNetwork" to="." method="_on_play_network_pressed"]
[connection signal="pressed" from="ButtonsContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonsContainer/About" to="About" method="popup_centered"]
[connection signal="name_accepted" from="NameDialog" to="." method="_on_name_dialog_name_accepted"]
[connection signal="visibility_changed" from="NameDialog" to="." method="_on_name_dialog_visibility_changed"]
[connection signal="pressed" from="About/MarginContainer/VBoxContainer/Close" to="About" method="hide"]
